# CMakeSDL3OpenGL

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Metal_Blit.h.37E5314D2A2F72C8.idx  Metal_Blit.h.602D7B69123D4897.idx  SDL.c.604AFB422043F58D.idx  SDL.c.F770F09EDD704B7B.idx  SDL.h.95A426DF1F823501.idx  SDL.h.F1DBE933BFB5BCB5.idx  SDL_RLEaccel.c.5175F78A3C2F360C.idx  SDL_RLEaccel.c.8B7C405353F1E099.idx  SDL_RLEaccel_c.h.7224ED69DEC8A382.idx  SDL_RLEaccel_c.h.EF4B31ED8559D67A.idx  SDL_assert.c.089B0E2C1228F267.idx  SDL_assert.c.8A0DD88BADAA2B17.idx  SDL_assert.h.77D3FD9936B696CF.idx  SDL_assert.h.F78A9EFBA8A5BAE4.idx  SDL_assert_c.h.5540A4AD9C5B25DD.idx  SDL_assert_c.h.5DD17FB04F77A8EE.idx  SDL_asyncio.c.82CDA0A3E01E12FA.idx  SDL_asyncio.c.850FCC25B614BE4D.idx  SDL_asyncio.h.2442BA0996D6F2BA.idx  SDL_asyncio.h.912FF406FA4B4949.idx  SDL_asyncio_c.h.2881E8CCECA0F5F0.idx  SDL_asyncio_c.h.D759DC4D30313EB4.idx  SDL_asyncio_generic.c.7C1F97BFB74F1D65.idx  SDL_asyncio_generic.c.F87E9057801E0C55.idx  SDL_atomic.c.8015B3B2D056E23F.idx  SDL_atomic.c.CCFA5B9B89D712D1.idx  SDL_atomic.h.4E8806764E1F5D3B.idx  SDL_atomic.h.4EC798B52690626A.idx  SDL_audio.c.728190602ED07676.idx  SDL_audio.c.882048120094347B.idx  SDL_audio.h.02560709BEEBACFF.idx  SDL_audio.h.BFE90783EE197379.idx  SDL_audio_c.h.70401FC2A9DC10BB.idx  SDL_audio_c.h.C338DBC4E9E59E93.idx  SDL_audio_channel_converters.h.8867EBCCCF850192.idx  SDL_audio_channel_converters.h.CFA82DB84A033860.idx  SDL_audiocvt.c.1F3194D557C21141.idx  SDL_audiocvt.c.4B14997AF0C86D97.idx  (+1272 more)
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
src/shaders/: fragment.glsl  vertex.glsl
